--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 * {
   margin: 0;
   box-sizing: border-box;
@@ -10,9 +10,71 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
   line-height: 26px;
+}
+
+a {
+  transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  padding: 16px 8px;
+  align-items: center;
+  display: flex;
+}
+
+.container {
+  display: flex;
+  max-width: 1140px;
+  align-items: center;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.logo {
+    cursor: pointer;
+}
+
+.menu-container {
+  margin-left: auto;
+}
+
+.menu {
+  display: flex;
+  list-style: none;
+  color: #fff;
+}
+
+.item {
+  padding-right: 20px;
+  padding-left: 35px;
+}
+
+.link-item {
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.link-item:hover {
+  color: #f57479;
+}
+
+.head-banner {
+  background: url("../img/header-bg.jpg") center center no-repeat;
+  background-size: cover;
+  overflow: hidden;
+  width: 100%;
+  height: 744px;
 }
