--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,36 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-html {
-  font-family: "Poppins", sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: transparent;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26px;
-}
-
-a {
-  transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-}
-
-nav {
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  padding: 16px 8px;
-  align-items: center;
-  display: flex;
-}
+@import url("./global.css");
+@import url("./navbar.css");
 
 .container {
   display: flex;
@@ -41,34 +10,6 @@ nav {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-}
-
-.logo {
-    cursor: pointer;
-}
-
-.menu-container {
-  margin-left: auto;
-}
-
-.menu {
-  display: flex;
-  list-style: none;
-  color: #fff;
-}
-
-.item {
-  padding-right: 20px;
-  padding-left: 35px;
-}
-
-.link-item {
-  font-weight: 500;
-  cursor: pointer;
-}
-
-.link-item:hover {
-  color: #f57479;
 }
 
 .head-banner {
