--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -22,3 +22,25 @@ a {
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
 }
+
+.container {
+  display: flex;
+  max-width: 1140px;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.btn {
+  font-size: 16px;
+  padding: 12px 35px;
+  border-radius: 3px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+  border: 1px solid;
+  cursor: pointer;
+}
