--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -21,6 +21,11 @@ a {
   -moz-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+section {
+  padding: 120px 0px;
 }
 
 .container {
