--- a/assets/style/about.css
+++ b/assets/style/about.css
@@ -25,7 +25,7 @@
   position: absolute;
   right: 0px;
   top: 0px;
-  border-right: 2px solid #1f1f40;
+  border-right: 2px solid var(--primary-color);
   width: 100%;
   border-radius: 100%;
   height: 100%;
@@ -37,7 +37,7 @@
   width: 90px;
   height: 90px;
   border-radius: 100%;
-  background: #934ae4;
+  background: var(--tertiary-color);
   color: #fff;
   text-align: center;
   padding-top: 33px;
@@ -47,7 +47,7 @@
   font-size: 25px;
 }
 .play-link:hover {
-  color: #f57479;
+  color: var(--secondary-color);
 }
 .right {
   margin-left: 95px;
@@ -61,7 +61,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 34px;
-  color: #f57479;
+  color: var(--secondary-color);
 }
 .right h2 {
   font-weight: 500;
@@ -75,13 +75,13 @@
   margin-bottom: 50px;
 }
 .right .btn {
-  background: #f57479;
+  background: var(--secondary-color);
   color: #fff;
-  /* border-color: #f57479; */
+  border-color: var(--secondary-color);
   border: none;
   text-decoration: none;
 }
 
 .right .btn:hover {
-  background: #1f1f40;
+  background: var(--primary-color);
 }
