--- a/assets/style/service.css
+++ b/assets/style/service.css
@@ -1,5 +1,5 @@
 .service {
-  background: #1f1f40;
+  background: var(--primary-color);
   width: 100%;
   height: 364px;
   color: #fff;
@@ -17,7 +17,7 @@
 
 .icon {
   font-size: 50px;
-  color: #f57479;
+  color: var(--secondary-color);
 }
 
 .col h3 {
