--- a/assets/style/about.css
+++ b/assets/style/about.css
@@ -2,6 +2,11 @@
   width: 100%;
   padding: 120px 0px;
 }
+
+.about .row {
+  align-items: flex-start;
+}
+
 .left {
   padding-right: 15px;
   padding-left: 15px;
