--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -34,6 +34,21 @@ section {
   padding: 120px 0px;
 }
 
+h3 {
+  color: var(--secondary-color);
+  font-size: 20px;
+  line-height: 34px;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
 .container {
   max-width: 1140px;
   width: 100%;
