--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -7,4 +7,8 @@
 @import url("./info.css");
 @import url("./skill.css");
 @import url("./testimonial.css");
-
+@import url("./slide-banner.css");
+@import url("./team.css");
+@import url("./article.css");
+@import url("./contact.css");
+@import url("./footer.css");
