--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,5 +10,5 @@
 @import url("./slide-banner.css");
 @import url("./team.css");
 @import url("./article.css");
-@import url("./contact.css");
+@import url("./quote.css");
 @import url("./footer.css");
